--- a/Javascript codes/project_js/nocount.html
+++ b/Javascript codes/project_js/nocount.html
@@ -61,15 +61,15 @@
                 const counter = document.querySelector('#counter')
                     counter.textContent = count
 
-                    if(count < 0){
-                        counter.style.color = 'red'
-                    }
-                    else if(count > 0){
-                        counter.style.color = 'green'
-                    }
-                    else{
-                        counter.srtyle.color = '#ffbb00'
-                    }
+                    // if(count < 0){
+                    //     counter.style.color = 'red'
+                    // }
+                    // else if(count > 0){
+                    //     counter.style.color = 'green'
+                    // }
+                    // else{
+                    //     counter.srtyle.color = '#ffbb00'
+                    // }
             })   
         })
     }) ();
