make some other file

--- a/multipleimg.html
+++ b/multipleimg.html
@@ -25,11 +25,11 @@
   addButton.addEventListener('click', function() {
     // Create img elements
     const img1 = document.createElement('img');
-    img1.src = 'path_to_your_image1.jpg'; // Set the source path of your image
+    img1.src = 'Javascript codes/img/product1.png'; // Set the source path of your image
     img1.alt = 'Image 1'; // Set the alternative text for accessibility
 
     const img2 = document.createElement('img');
-    img2.src = 'path_to_your_image2.jpg'; // Set the source path of your image
+    img2.src = 'Javascript codes/img/product3.png'; // Set the source path of your image
     img2.alt = 'Image 2'; // Set the alternative text for accessibility
 
     // Append img elements to container
