--- a/Javascript codes/browser_obj_model.html
+++ b/Javascript codes/browser_obj_model.html
@@ -51,7 +51,7 @@
         function Timing(){
             setTimeout(
                 function(){
-                    alert("This is Arya Patel");
+                    alert("I AM HERE");
                 }, 2000);
         }
 
@@ -59,6 +59,7 @@
             close();
         }
         
+        document.writeln("current page History : " +history.length)
     </script>
 </body>
 </html>
